[update] query for recent activities [update] documentation
